Import of MBROOKS/Apache2-WebApp-Plugin-Filters-0.09 from CPAN.
gitpan-cpan-distribution: Apache2-WebApp-Plugin-Filters
gitpan-cpan-version:      0.09
gitpan-cpan-path:         MBROOKS/Apache2-WebApp-Plugin-Filters-0.09.tar.gz
gitpan-cpan-author:       MBROOKS
gitpan-cpan-maturity:     released

--- a/INSTALL
+++ b/INSTALL
@@ -8,13 +8,12 @@ Install this package from source:
 
 Perl one liner using CPAN.pm:
 
-  perl -MCPAN -e 'install Apache2::WebApp::Plugin::Filters'
+  $ perl -MCPAN -e 'install Apache2::WebApp::Plugin::Filters'
 
 
 Use of CPAN.pm in interactive mode:
 
   $ perl -MCPAN -e shell
-
   cpan> install Apache2::WebApp::Plugin::Filters
   cpan> quit
 
